feat: minor fix

--- a/src/custom.css
+++ b/src/custom.css
@@ -1,5 +1,5 @@
 .bg-pink {
-    background-color: #ff69b4 !important; /* Cor rosa */
+    background-color: #ff69b4 !important;
   }
   
   .btn-pink {
